// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactList renders with contacts with both email and name 1`] = `
<div
  className="__InlineList__ di"
>
  <span
    className="b"
  >
    Contact
    : 
  </span>
  <ul>
    <li
      key="johndoe@yahoo.com"
    >
      <span>
        John
      </span>
       (
      <LinkWithTargetBlank
        as="a"
        href="mailto:johndoe@yahoo.com"
      >
        johndoe@yahoo.com
      </LinkWithTargetBlank>
      )
      ; 
    </li>
    <li
      key="johndoe2@yahoo.com"
    >
      <span>
        John2
      </span>
       (
      <LinkWithTargetBlank
        as="a"
        href="mailto:johndoe2@yahoo.com"
      >
        johndoe2@yahoo.com
      </LinkWithTargetBlank>
      )
    </li>
  </ul>
</div>
`;

exports[`ContactList renders with contacts with only email or name 1`] = `
<div
  className="__InlineList__ di"
>
  <span
    className="b"
  >
    Contact
    : 
  </span>
  <ul>
    <li
      key="johndoe@yahoo.com"
    >
      <LinkWithTargetBlank
        as="a"
        href="mailto:johndoe@yahoo.com"
      >
        johndoe@yahoo.com
      </LinkWithTargetBlank>
      ; 
    </li>
    <li
      key="John2"
    >
      <span>
        John2
      </span>
    </li>
  </ul>
</div>
`;

exports[`ContactList renders with contacts with record and name 1`] = `
<div
  className="__InlineList__ di"
>
  <span
    className="b"
  >
    Contact
    : 
  </span>
  <ul>
    <li
      key="John"
    >
      <Link
        to="/authors/12345"
      >
        John
      </Link>
    </li>
  </ul>
</div>
`;
